	    might return '2'. This mean '0' and '1' but '1' is empty. Deduct one from the
	    count to make sure we get the value correctly.
	  - ldap_read() must be called with additional fourth parameter (attributes to
	    retreive) as 'array(+)' if one wants the operational attributes. This works
	    on OpenLDAP, but might break other LDAP servers...

	GUI layout changes
	  - RDN and FQDN should not be shown in if we're viewing the 'Global' 
	    QmailLDAP/Control frame.

	Schema changes
	API changes
	Misc changes
	  - Add support for searching for DNS hostname/ip address in search page.
	  - Extra debugging in include/pql_search.inc:pql_search() regarding cache.

phpQLAdmin 2.3.4 Release (Oct 20 2006)
	Bug fixes
	  - Retreiving ALL operational attributes with '+' is an OpenLDAP thing ONLY.
	    On all other (?), one must specify the attributes in question directly.
	  - Instead of doing urldecode() all over the place and to normalize the DN
	    (of users and domains etc), create a pql_format_normalize_dn() function
	    that will: urldecode, strtolower, replace ', ' with ',' and lastly country
	    encode the DN.
	  - Duplicate functions _chmod(). The later should have been named _chown().

	GUI layout changes
	  - Add a Automount manager.
	    Closes: #307
	  - Possibility to lock account type, -username, -password, -email and account
	    domain address. Done in the Domain details->default values table.

	Schema changes
	  - Add attribute 'useAutoMount' (oid 1.3.6.1.4.1.8767.3.2.1.30) for use with 
	    the Automount manager.
	  - Possibility to lock account type, -username, -password, -email and account
	    domain address.
	    + Add attribute 'lockUserName' (oid 1.3.6.1.4.1.8767.3.2.1.31)
	    + Add attribute 'lockEmailAddress' (oid 1.3.6.1.4.1.8767.3.2.1.32)
	    + Add attribute 'lockDomainAddress' (oid 1.3.6.1.4.1.8767.3.2.1.33)
	    + Add attribute 'lockPassword' (oid 1.3.6.1.4.1.8767.3.2.1.34)